New entries should be added at the top

2005-10-04 Added rkern's texmanager patch

2005-09-25 contour.py modified to use a single ContourSet class
           that handles filled contours, line contours, and labels;
           added keyword arg (clip_ends) to contourf.
           Colorbar modified to work with new ContourSet object;
           if the ContourSet has lines rather than polygons, the
           colorbar will follow suit. Fixed a bug introduced in
           0.84, in which contourf(...,colors=...) was broken - EF

2005-09-14 Added a new 'resize_event' which triggers a callback with a
           backend_bases.ResizeEvent object - JDH

2005-09-14 font_manager.py: removed chkfontpath from x11FontDirectory() - SC

2005-09-14 Factored out auto date locator/formatter factory code into
           matplotlib.date.date_ticker_factory; applies John Bryne's
           quiver patch.

2005-09-13 Added Mark's axes positions history patch #1286915

2005-09-09 Added support for auto canvas resizing with
           fig.set_figsize_inches(9,5,forward=True) # inches
           OR
           fig.resize(400,300)  # pixels

2005-09-07 figure.py: update Figure.draw() to use the updated
           renderer.draw_image() so that examples/figimage_demo.py works again.
           examples/stock_demo.py: remove data_clipping (which no longer
           exists) - SC

2005-09-06 Added Eric's tick.direction patch: in or out in rc

2005-09-06 Added Martin's rectangle selector widget

2005-09-04 Fixed a logic err in text.py that was preventing rgxsuper
           from matching - JDH

2005-08-29 Committed Ken's wx blit patch #1275002

2005-08-26 colorbar modifications - now uses contourf instead of imshow
           so that colors used by contourf are displayed correctly.
           Added two new keyword args (cspacing and clabels) that are
           only relevant for ContourMappable images - JSWHIT

2005-08-24 Fixes a PS image bug reported by Darren - JDH
